--- a/projektNowy/WebContent/WEB-INF/web.xml
+++ b/projektNowy/WebContent/WEB-INF/web.xml
@@ -9,4 +9,12 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+   	    <servlet-name>HelloWorld</servlet-name>
+  		<servlet-class>controller.HelloWorld</servlet-class>
+  </servlet>
+  <servlet-mapping> 
+  <servlet-name>HelloWorld</servlet-name>
+  <url-pattern>/Hello.do</url-pattern>
+  </servlet-mapping>
 </web-app>
